--- a/index.html
+++ b/index.html
@@ -288,6 +288,48 @@
                         <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> NOM-035 / NOM-036</li>
                     </ul>
                 </div>
+
+                <!-- Card 5: Lactarios -->
+                <div class="bg-white rounded-xl shadow-lg border-b-4 border-pink-400 p-6 hover:transform hover:-translate-y-2 transition-all duration-300">
+                    <div class="flex items-center justify-between mb-4">
+                        <span class="font-bold text-2xl text-gray-200">05</span>
+                        <i class="fas fa-person-breastfeeding text-pink-400 text-2xl"></i>
+                    </div>
+                    <h3 class="font-heading font-bold text-navy text-lg mb-2" data-i18n="legal_c5_title">Lactarios Dignos</h3>
+                    <p class="text-sm text-gray-600 mb-4" data-i18n="legal_c5_desc">Regulación sanitaria técnica para la instalación y operación de salas de lactancia.</p>
+                    <ul class="text-xs text-gray-500 space-y-2">
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Cumplimiento Sanitario</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Bienestar Materno</li>
+                    </ul>
+                </div>
+
+                <!-- Card 6: NOM-251 Alimentos -->
+                <div class="bg-white rounded-xl shadow-lg border-b-4 border-green-500 p-6 hover:transform hover:-translate-y-2 transition-all duration-300">
+                    <div class="flex items-center justify-between mb-4">
+                        <span class="font-bold text-2xl text-gray-200">06</span>
+                        <i class="fas fa-utensils text-green-500 text-2xl"></i>
+                    </div>
+                    <h3 class="font-heading font-bold text-navy text-lg mb-2" data-i18n="legal_c6_title">Higiene (NOM-251)</h3>
+                    <p class="text-sm text-gray-600 mb-4" data-i18n="legal_c6_desc">Buenas prácticas de higiene en la preparación de alimentos y comedores industriales.</p>
+                    <ul class="text-xs text-gray-500 space-y-2">
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Auditoría Comedores</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Prevención ETA</li>
+                    </ul>
+                </div>
+
+                <!-- Card 7: RPBI -->
+                <div class="bg-white rounded-xl shadow-lg border-b-4 border-red-600 p-6 hover:transform hover:-translate-y-2 transition-all duration-300">
+                    <div class="flex items-center justify-between mb-4">
+                        <span class="font-bold text-2xl text-gray-200">07</span>
+                        <i class="fas fa-biohazard text-red-600 text-2xl"></i>
+                    </div>
+                    <h3 class="font-heading font-bold text-navy text-lg mb-2" data-i18n="legal_c7_title">RPBI (NOM-087)</h3>
+                    <p class="text-sm text-gray-600 mb-4" data-i18n="legal_c7_desc">Manejo seguro de Residuos Peligrosos Biológico-Infecciosos y normativa ambiental.</p>
+                    <ul class="text-xs text-gray-500 space-y-2">
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Clasificación Correcta</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i> Disposición Final</li>
+                    </ul>
+                </div>
             </div>
 
             <!-- Bottom CTA / Compliance Seal -->
@@ -902,6 +944,14 @@
                 "legal_c3_desc": "Integración clínica robusta para defensa legal ante controversias o auditorías sanitarias.",
                 "legal_c4_title": "Normatividad STPS",
                 "legal_c4_desc": "Implementación técnica de NOMs críticas para seguridad e higiene industrial.",
+                // NEW LEGAL CARDS
+                "legal_c5_title": "Lactarios Dignos",
+                "legal_c5_desc": "Regulación sanitaria técnica para la instalación y operación de salas de lactancia.",
+                "legal_c6_title": "Higiene (NOM-251)",
+                "legal_c6_desc": "Buenas prácticas de higiene en la preparación de alimentos y comedores industriales.",
+                "legal_c7_title": "RPBI (NOM-087)",
+                "legal_c7_desc": "Manejo seguro de Residuos Peligrosos Biológico-Infecciosos y normativa ambiental.",
+                
                 "legal_cta_title": "¿Listo para una auditoría?",
                 "legal_cta_desc": "Simulacros de inspección STPS y auditoría de expedientes clínicos para asegurar cumplimiento total.",
                 "legal_btn": "Auditar Cumplimiento",
@@ -1076,6 +1126,14 @@
                 "legal_c3_desc": "Robust clinical integration for legal defense in sanitary disputes or audits.",
                 "legal_c4_title": "STPS Standards",
                 "legal_c4_desc": "Technical implementation of critical industrial safety and hygiene NOMs.",
+                // NEW LEGAL CARDS EN
+                "legal_c5_title": "Nursing Rooms",
+                "legal_c5_desc": "Sanitary technical regulation for the installation and operation of lactation rooms.",
+                "legal_c6_title": "Hygiene (NOM-251)",
+                "legal_c6_desc": "Good hygiene practices in food preparation and industrial cafeterias.",
+                "legal_c7_title": "Hazmat Waste (NOM-087)",
+                "legal_c7_desc": "Safe management of Hazardous Biological-Infectious Waste and environmental regulations.",
+
                 "legal_cta_title": "Ready for an audit?",
                 "legal_cta_desc": "STPS inspection drills and clinical record audits to ensure full compliance.",
                 "legal_btn": "Audit Compliance",
