--- a/index.html
+++ b/index.html
@@ -832,6 +832,14 @@
                                 <span class="text-xs text-gray-500" data-i18n="career_edu_8_desc">Manejo seguro según NOM-087-ECOL-SSA1-2002</span>
                             </div>
                         </li>
+                        <!-- NUEVO CURSO: BIENESTAR Y ESTRÉS -->
+                        <li class="flex items-start gap-3">
+                            <i class="fas fa-brain text-indigo-500 mt-1"></i>
+                            <div>
+                                <strong class="block text-navy text-sm" data-i18n="career_edu_9_title">Gestión Estratégica del Bienestar y Estrés Laboral</strong>
+                                <span class="text-xs text-gray-500" data-i18n="career_edu_9_desc">Prevención de Burnout, Salud Mental Corporativa y Productividad Sostenible</span>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -987,6 +995,8 @@
                 "career_edu_7_desc": "Normativa para espacios de lactancia materna",
                 "career_edu_8_title": "Residuos Peligrosos Biológico Infecciosos (R.P.B.I.)",
                 "career_edu_8_desc": "Manejo seguro según NOM-087-ECOL-SSA1-2002",
+                "career_edu_9_title": "Gestión Estratégica del Bienestar y Estrés Laboral",
+                "career_edu_9_desc": "Prevención de Burnout, Salud Mental Corporativa y Productividad Sostenible",
                 // Dashboard Translations MODIFIED
                 "kpi_days": "Días Incapacidad",
                 "kpi_compliance": "Cumplimiento ISO",
@@ -1169,6 +1179,8 @@
                 "career_edu_7_desc": "Compliance standards for lactation spaces",
                 "career_edu_8_title": "Hazmat Biological-Infectious Waste (R.P.B.I.)",
                 "career_edu_8_desc": "Safe management per NOM-087-ECOL-SSA1-2002",
+                "career_edu_9_title": "Strategic Wellness & Stress Management",
+                "career_edu_9_desc": "Burnout Prevention, Corporate Mental Health & Sustainable Productivity",
                 // Dashboard Translations MODIFIED
                 "kpi_days": "Disability Days",
                 "kpi_compliance": "ISO Compliance",
