--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 <a href="mailto:dr.hanmedical@gmail.com" class="px-8 py-4 bg-white text-navy font-bold rounded hover:bg-gray-100 transition-colors flex items-center justify-center gap-3"><i class="fas fa-envelope"></i> <span data-i18n="footer_btn_email">Correo electrónico</span></a>
                 <a href="https://wa.me/525629846164" target="_blank" class="px-8 py-4 bg-whatsapp text-white font-bold rounded hover:bg-green-600 transition-colors flex items-center justify-center gap-3"><i class="fab fa-whatsapp"></i> <span data-i18n="footer_btn_wa">WhatsApp directo</span></a>
                 <a href="https://www.linkedin.com/in/drhanmedical" target="_blank" class="px-8 py-4 bg-[#0077b5] text-white font-bold rounded hover:bg-[#006097] transition-colors flex items-center justify-center gap-3"><i class="fab fa-linkedin"></i> <span data-i18n="footer_btn_linkedin">LinkedIn</span></a>
-                <a href="https://drhanmedical.github.io/Strategic-Health" target="_blank" class="px-8 py-4 bg-indigo-600 text-white font-bold rounded hover:bg-indigo-500 transition-colors flex items-center justify-center gap-3"><i class="fas fa-globe"></i> <span>Ver Portafolio Web</span></a>
+                <a href="https://drive.google.com/file/d/1zPAhoGCNj7cHVxNoF2MLWUudHTGEP_4-/view?usp=drive_link" target="_blank" class="px-8 py-4 bg-indigo-600 text-white font-bold rounded hover:bg-indigo-500 transition-colors flex items-center justify-center gap-3"><i class="fas fa-file-pdf"></i> <span data-i18n="footer_btn_cv_download">Descarga CV completo</span></a>
             </div>
             <div class="border-t border-gray-800 pt-10 text-sm text-gray-400">
                 <p class="font-heading font-bold text-white text-base">Dr. Han | Strategic Health</p>
@@ -815,6 +815,12 @@
                 "career_reg_food": "Regulación Comedores (NOM-251)",
                 "career_reg_rpbi": "Manejo de RPBI (NOM-087)",
                 
+                // Footer
+                "footer_btn_email": "Correo electrónico",
+                "footer_btn_wa": "WhatsApp directo",
+                "footer_btn_linkedin": "LinkedIn",
+                "footer_btn_cv_download": "Descarga CV completo",
+
                 // Dashboard Translations
                 "kpi_days": "Días Incapacidad",
                 "kpi_compliance": "Cumplimiento ISO",
@@ -992,6 +998,12 @@
                 "career_reg_lact": "Nursing Room Regulation",
                 "career_reg_food": "Cafeteria Regulation (NOM-251)",
                 "career_reg_rpbi": "Hazmat Waste Mgmt (NOM-087)",
+                
+                // Footer
+                "footer_btn_email": "Email",
+                "footer_btn_wa": "Direct WhatsApp",
+                "footer_btn_linkedin": "LinkedIn",
+                "footer_btn_cv_download": "Download Full CV",
 
                 // Dashboard Translations
                 "kpi_days": "Disability Days",
