--- a/index.html
+++ b/index.html
@@ -717,8 +717,7 @@
                     <!-- JUSTIFICADO APLICADO -->
                     <p class="text-gray-600 text-sm leading-relaxed text-justify hyphens-none" data-i18n="career_role1_desc">
                         <strong>Gestión de Siniestralidad:</strong> Liderazgo en investigación de accidentes y calificación de riesgos (ST-7, ST-9) ante el IMSS, logrando reducción directa de la Prima de Riesgo.<br>
-                        <strong>Seguridad Crítica:</strong> Implementación de protocolos de fatiga y alcoholimetría para personal operativo.<br>
-                        <strong>Administración Médica:</strong> Cobertura estratégica en Fresenius Kabi, DHL CEDIS y Walmart CEDIS.
+                        <strong>Seguridad Crítica:</strong> Implementación de protocolos de fatiga y alcoholimetría para personal operativo.
                     </p>
                 </div>
 
@@ -907,7 +906,7 @@
                 "bi_btn_035": "Psicosocial NOM-035", 
                 "bi_btn_036": "Ergonomía NOM-036", 
                 "bi_btn_iso": "Gestión ISO 45001", 
-                "bi_btn_wellness": "Wellness & Retención", 
+                "bi_btn_wellness": "Wellness & Retention", 
                 "dash_header_title": "Centro de Comando Estratégico", 
                 "dash_header_status": "Status: En línea • Datos actualizados", 
                 "dash_toggle_label": "Estrategia", 
@@ -951,60 +950,6 @@
                 "footer_title": "¿Hablamos de estrategia?", 
                 "footer_btn_email": "Correo electrónico", 
                 "footer_btn_wa": "WhatsApp directo", 
-                "footer_btn_linkedin": "LinkedIn",
-                "footer_rights": "© 2026 Dr. Han Medical. Todos los derechos reservados.",
-                // Legal
-                "legal_badge": "COMPLIANCE & EHS",
-                "legal_title": "Marco Normativo: <span class=\"text-indigo-600\">Datos, ISO & STPS</span>",
-                "legal_desc": "Un sistema de gestión integrado que une la seguridad jurídica (LFPDPPP) con la excelencia operativa (ISO/Lean). Protejo la licencia sanitaria y optimizo los procesos de EHS.",
-                "legal_c1_desc": "Auditoría interna ISO 45001/9001 y mejora continua con Lean Six Sigma.",
-                "legal_c2_desc": "Cumplimiento estricto de LFPDPPP para manejo de datos sensibles de colaboradores.",
-                "legal_c3_title": "NOM-004-SSA3",
-                "legal_c3_desc": "Integración clínica robusta para defensa legal ante controversias o auditorías sanitarias.",
-                "legal_c4_title": "Normatividad STPS",
-                "legal_c4_desc": "Implementación técnica de NOMs críticas para seguridad e higiene industrial.",
-                "legal_c5_title": "Lactarios Dignos",
-                "legal_c5_desc": "Regulación sanitaria técnica para la instalación y operación de salas de lactancia.",
-                "legal_c6_title": "Higiene (NOM-251)",
-                "legal_c6_desc": "Buenas prácticas de higiene en la preparación de alimentos y comedores industriales.",
-                "legal_c7_title": "RPBI (NOM-087)",
-                "legal_c7_desc": "Manejo seguro de Residuos Peligrosos Biológico-Infecciosos y normativa ambiental.",
-                "legal_cta_title": "¿Listo para una auditoría?",
-                "legal_cta_desc": "Simulacros de inspección STPS y auditoría de expedientes clínicos para asegurar cumplimiento total.",
-                "legal_btn": "Auditar Cumplimiento",
-                // Career (ACTUALIZADO)
-                "career_badge": "EXPERIENCIA & LIDERAZGO",
-                "career_title": "Trayectoria <span class=\"text-indigo-600\">Profesional</span>",
-                "career_desc": "Más de 6 años de experiencia consolidada en atención médica y gestión estratégica de servicios de salud corporativa.",
-                "career_role1_title": "Médico Ocupacional & Gestor de Riesgos",
-                "career_role1_date": "Julio 2023 - Mayo 2025",
-                "career_role1_desc": "<strong>Gestión de Siniestralidad:</strong> Liderazgo en investigación de accidentes y calificación de riesgos (ST-7, ST-9) ante el IMSS, logrando reducción directa de la Prima de Riesgo.<br><strong>Seguridad Crítica:</strong> Implementación de protocolos de fatiga y alcoholimetría para personal operativo.<br><strong>Administración Médica:</strong> Cobertura estratégica en Fresenius Kabi, DHL CEDIS y Walmart CEDIS.",
-                "career_role2_title": "Líder de Proyecto Médico (Proyecto)",
-                "career_role2_date": "Junio 2023 - Septiembre 2023",
-                "career_role2_desc": "Estructuración del departamento médico desde cero. Diseño de filtros médicos de reclutamiento para reducir rotación temprana y estandarización normativa de expedientes clínicos.",
-                "career_role3_title": "Médico General y Familiar",
-                "career_role3_sub": "Práctica Privada & Telemedicina",
-                "career_role3_date": "Febrero 2019 - Presente",
-                "career_role3_desc": "Atención híbrida (presencial/remota) enfocada en diagnóstico certero y control de enfermedades crónico-degenerativas.",
-                "career_edu_title": "Formación Académica & Certificaciones",
-                "career_edu_2_title": "Especialidad en Seguridad e Higiene Industrial",
-                "career_edu_2_desc": "UNITEC | Esperado: Abril 2026",
-                "career_edu_3_title": "Especialidad en Derecho Sanitario",
-                "career_edu_3_desc": "Enfoque: Responsabilidad COFEPRIS y Normatividad",
-                "career_edu_4_title": "Certificación Lean Six Sigma",
-                "career_edu_4_desc": "Yellow & Green (Certificado) | Black Belt (Fase de Proyecto)",
-                "career_edu_diplomas": "Diplomados en Salud Ocupacional y Ergonomía",
-                "career_cert_acls": "Soporte Vital Avanzado y Básico (ACLS & BLS)",
-                "career_edu_9_title": "Gestión Estratégica del Bienestar y Estrés Laboral",
-                "career_edu_9_desc": "Prevención de Burnout, Salud Mental Corporativa y Productividad Sostenible",
-                // NUEVAS TRADUCCIONES REGULATORIAS
-                "career_reg_lact": "Regulación de Lactarios",
-                "career_reg_food": "Regulación Comedores (NOM-251)",
-                "career_reg_rpbi": "Manejo de RPBI (NOM-087)",
-                
-                // Footer
-                "footer_btn_email": "Correo electrónico",
-                "footer_btn_wa": "WhatsApp directo",
                 "footer_btn_linkedin": "LinkedIn",
                 "footer_btn_cv_download": "Descarga CV completo",
 
@@ -1050,7 +995,7 @@
                 "iso_cc_consult": "Consulta (5.4)",
                 "iso_cc_legal": "Matriz Legal (6.1.3)",
                 "iso_cc_emerg": "Emergencias (8.2)",
-                "iso_cc_review": "Revisión Dirección (9.3)",
+                "iso_cc_review": "Mgmt Review (9.3)",
                 "iso_findings_major": "Hallazgos Mayores",
                 "rep_kpi_compliance": "Estatus Normativo",
                 "rep_kpi_financial": "Talento Retenido",
